change search flow on mobile, add cast loading, bug fix styling

--- a/src/routes/search/desktop/Cast/Cast.css
+++ b/src/routes/search/desktop/Cast/Cast.css
@@ -53,11 +53,6 @@
   object-fit: cover;
 }
 
-.castImgLoading {
-  height: 76px;
-  width: 76px;
-}
-
 .castBox span {
   font-size: 13px;
   display: inline;
