--- a/src/routes/search/error/Error.css
+++ b/src/routes/search/error/Error.css
@@ -17,6 +17,7 @@
   text-align: center;
   padding: 0 20px;
   width: 100%;
+  box-sizing: border-box;
 }
 
 .searchErrorContainer img {
