--- a/src/routes/search/mobile/Search.css
+++ b/src/routes/search/mobile/Search.css
@@ -131,28 +131,6 @@
   width: 100%;
 }
 
-.resultRow {
-  padding-bottom: 32px;
-  margin: 0;
-  display: flex;
-}
-
-.resultTitle {
-  color: #bababa;
-  font-size: 17px;
-  font-weight: normal;
-  display: inline-block;
-  flex: 1 0 160px;
-}
-
-.resultContent {
-  color: #fff;
-  font-size: 16px;
-  font-weight: normal;
-  display: block;
-  width: 100%;
-}
-
 .containerBg {
   background-color: #11110f;
   position: absolute;
